# multiprocessing

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.MD
app/: CMakeLists.txt
app/include/: combined_workloads.h  helpers.h  image.h  opencl_runtime.h  profiler.h  scope_timer.h  thread_pool.h
app/include/cpu_workloads/: cpu_workloads.h  phase_2.h  phase_3.h  phase_3_vectorized.h  phase_4.h  phase_4_vectorized.h  phase_7.h
app/include/opencl_workloads/: opencl_workloads.h  phase_1.h  phase_2.h  phase_5.h  phase_6_a.h  phase_6_b.h  phase_6_c.h  phase_6_image2d_t.h  phase_6_tiled.h  phase_6_vectorized.h  phase_7.h  phase_7_integral.h  phase_7_integral_aps.h  phase_7_integral_aps_cl.h
app/src/: combined_workloads.cc  helpers.cc  image.cc  main.cc  opencl_runtime.cc  profiler.cc  scope_timer.cc  thread_pool.cc
app/src/cpu_workloads/: cpu_workloads.cc  phase_2.cc  phase_3.cc  phase_3_vectorized.cc  phase_4.cc  phase_4_vectorized.cc  phase_7.cc
app/src/opencl_workloads/: opencl_workloads.cc  phase_1.cc  phase_2.cc  phase_5.cc  phase_6_a.cc  phase_6_b.cc  phase_6_c.cc  phase_6_image2d_t.cc  phase_6_tiled.cc  phase_6_vectorized.cc  phase_7.cc  phase_7_integral.cc  phase_7_integral_aps.cc  phase_7_integral_aps_cl.cc
data/kernels/: phase_1.cl  phase_2.cl  phase_5.cl  phase_6_image_2d_t.cl  phase_6_tiled.cl  phase_6_vectorized.cl  phase_7.cl  phase_7_integral.cl  phase_7_integral_aps.cl  phase_7_integral_aps_cl.cl
data/zncc/: calib.txt
modules/: CMakeLists.txt
modules/drawkit/: CMakeLists.txt
modules/drawkit/api/: CMakeLists.txt
modules/drawkit/api/include/drawkit/: high_performance_timer.h  init.h  pixel_format.h  surface.h
modules/drawkit/drawkit_sdl3/: CMakeLists.txt
modules/drawkit/drawkit_sdl3/include/drawkit_sdl3/: conversion.h  surface.h
modules/drawkit/drawkit_sdl3/src/: conversion.cc  high_performance_timer.cc  init.cc  surface.cc
modules/drawkit/src/: anchor.cc
modules/opencl_wrapper/: CMakeLists.txt
modules/opencl_wrapper/include/opencl_wrapper/: bad_value_or_access.h  buffer.h  command_queue.h  context.h  device.h  error_or.h  event.h  image.h  kernel.h  local.h  opencl.h  opencl_wrapper.h  platform.h  program.h
modules/opencl_wrapper/src/: buffer.cc  command_queue.cc  context.cc  device.cc  event.cc  image.cc  kernel.cc  platform.cc  program.cc
outputs/10/logs/: sample_data.csv
outputs/12/logs/: sample_data.csv
outputs/2_core_radius_6/logs/1/: sample_data.csv
outputs/2_core_radius_6/logs/2/: sample_data.csv
outputs/4/logs/: sample_data.csv
outputs/6/logs/: sample_data.csv
outputs/8/logs/: sample_data.csv
